@@ -22,51 +22,27 @@ from tetragono.common_tensor.Fermi import CP, CM, I
 from tetragono.common_tensor.Fermi_Hubbard import put_sign_in_H
 
 # merge order: up down
-CPU = kronecker_product(rename_io(CP, {0: 0}), rename_io(I, {0: 1})).merge_edge({
+CPU = kronecker_product(rename_io(CP, [0]), rename_io(I, [1])).merge_edge({
     "I0": ["I0", "I1"],
     "O0": ["O0", "O1"]
 }, put_sign_in_H, {"O0"})
-CPD = kronecker_product(rename_io(CP, {0: 1}), rename_io(I, {0: 0})).merge_edge({
+CPD = kronecker_product(rename_io(CP, [1]), rename_io(I, [0])).merge_edge({
     "I0": ["I0", "I1"],
     "O0": ["O0", "O1"]
 }, put_sign_in_H, {"O0"})
-CMU = kronecker_product(rename_io(CM, {0: 0}), rename_io(I, {0: 1})).merge_edge({
+CMU = kronecker_product(rename_io(CM, [0]), rename_io(I, [1])).merge_edge({
     "I0": ["I0", "I1"],
     "O0": ["O0", "O1"]
 }, put_sign_in_H, {"O0"})
-CMD = kronecker_product(rename_io(CM, {0: 1}), rename_io(I, {0: 0})).merge_edge({
+CMD = kronecker_product(rename_io(CM, [1]), rename_io(I, [0])).merge_edge({
     "I0": ["I0", "I1"],
     "O0": ["O0", "O1"]
 }, put_sign_in_H, {"O0"})
 
-CMUD = kronecker_product(
-    rename_io(CMU, {
-        0: 0
-    }).edge_rename({"T": "T0"}),
-    rename_io(CMD, {
-        0: 1
-    }).edge_rename({"T": "T1"}))
-CMDU = kronecker_product(
-    rename_io(CMD, {
-        0: 0
-    }).edge_rename({"T": "T0"}),
-    rename_io(CMU, {
-        0: 1
-    }).edge_rename({"T": "T1"}))
-CPUD = kronecker_product(
-    rename_io(CPU, {
-        0: 0
-    }).edge_rename({"T": "T0"}),
-    rename_io(CPD, {
-        0: 1
-    }).edge_rename({"T": "T1"}))
-CPDU = kronecker_product(
-    rename_io(CPD, {
-        0: 0
-    }).edge_rename({"T": "T0"}),
-    rename_io(CPU, {
-        0: 1
-    }).edge_rename({"T": "T1"}))
+CMUD = kronecker_product(rename_io(CMU, [0]).edge_rename({"T": "T0"}), rename_io(CMD, [1]).edge_rename({"T": "T1"}))
+CMDU = kronecker_product(rename_io(CMD, [0]).edge_rename({"T": "T0"}), rename_io(CMU, [1]).edge_rename({"T": "T1"}))
+CPUD = kronecker_product(rename_io(CPU, [0]).edge_rename({"T": "T0"}), rename_io(CPD, [1]).edge_rename({"T": "T1"}))
+CPDU = kronecker_product(rename_io(CPD, [0]).edge_rename({"T": "T0"}), rename_io(CPU, [1]).edge_rename({"T": "T1"}))
 
 # CPAB CMCD will give (c_0A c_1B)^dagger (c_0C c_1D)
 # CPAB.contract(CMCD, {("T0","T0"), ("T1","T1")})
@@ -75,21 +51,9 @@ CP_singlet = (CPUD - CPDU) / np.sqrt(2)
 CM_triplet = (CMUD + CMDU) / np.sqrt(2)
 CP_triplet = (CPUD + CPDU) / np.sqrt(2)
 
-singlet = rename_io(CP_singlet, {
-    0: 0,
-    1: 1
-}).contract(rename_io(CM_singlet, {
-    0: 2,
-    1: 3
-}), {("T0", "T0"), ("T1", "T1")}).to(float)
+singlet = rename_io(CP_singlet, [0, 1]).contract(rename_io(CM_singlet, [2, 3]), {("T0", "T0"), ("T1", "T1")}).to(float)
 
-triplet = rename_io(CP_triplet, {
-    0: 0,
-    1: 1
-}).contract(rename_io(CM_triplet, {
-    0: 2,
-    1: 3
-}), {("T0", "T0"), ("T1", "T1")}).to(float)
+triplet = rename_io(CP_triplet, [0, 1]).contract(rename_io(CM_triplet, [2, 3]), {("T0", "T0"), ("T1", "T1")}).to(float)
 
 singlet_pool = {(): singlet}
 triplet_pool = {(): triplet}
