@@ -72,7 +72,7 @@ def abstract_state(L1, L2, delta, omega, U):
             if l1 != L1 - 1:
                 state.hamiltonians[(l1, l2, 5),] = H
 
-    nn = kronecker_product(rename_io(n, {0: 0}), rename_io(n, {0: 1}))
+    nn = kronecker_product(rename_io(n, [0]), rename_io(n, [1]))
     Unn = U * nn
     for l1 in range(L1):
         for l2 in range(L2):
