@@ -50,7 +50,7 @@ def abstract_state(L1, L2, delta, omega, radius, U):
                 state.hamiltonians[(l1, l2, 0),] = single_body_hamiltonian_with_U
             else:
                 state.hamiltonians[(l1, l2, 0),] = single_body_hamiltonian
-    nn = kronecker_product(rename_io(n, {0: 0}), rename_io(n, {0: 1}))
+    nn = kronecker_product(rename_io(n, [0]), rename_io(n, [1]))
     for al1 in range(L1):
         for al2 in range(L2):
             for bl1 in range(L1):
